--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
     "next": "15.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "eslint": "^9",
