--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
+    "axios": "^1.11.0",
     "next": "15.4.6",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
