--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "next": "15.4.6",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^5.4.54",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-pdf": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
